[metadata]
name = urllib3
description = HTTP library with thread-safe connection pooling, file post, and more.
long_description = file: README.rst, CHANGES.rst
keywords = urllib, httplib, threadsafe, filepost, http, https, ssl, pooling
license = MIT
author = Andrey Petrov
author_email = andrey.petrov@shazow.net
url = https://urllib3.readthedocs.io/
project_urls =
    Documentation = https://urllib3.readthedocs.io/
    Code = https://github.com/urllib3/urllib3
    Issue tracker = https://github.com/urllib3/urllib3/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, != 3.4.*, <4
install_requires =
    h11 >= 0.8.0
    sniffio; python_version>='3.6'

[options.packages.find]
where = src

[options.extras_require]
brotli = brotlipy>=0.6.0
secure =
    pyOpenSSL>=0.14
    cryptography>=1.3.4
    idna>=2.0.0
    certifi
    ipaddress; python_version=='2.7'
socks = PySocks >=1.5.6, <2.0, !=1.5.7

[tool:pytest]
xfail_strict = true
python_classes = Test *TestCase
trio_mode = true

[flake8]
ignore = E501, E203, W503, W504
exclude = ./docs/conf.py,./src/urllib3/packages/*
max-line-length = 99

[bdist_wheel]
universal = 1

[coverage:run]
omit =
    *urllib3/packages/*
    *urllib3/contrib/appengine.py
    *urllib3/contrib/ntlmpool.py
    *urllib3/contrib/pyopenssl.py
    *urllib3/contrib/securetransport.py
    *urllib3/contrib/_securetransport/*
    # remove when ready to test the async backends
    *urllib3/_async/*
    *urllib3/_backends/anyio_backend.py
    *urllib3/_backends/trio_backend.py
    *urllib3/_backends/twisted_backend.py
    *urllib3/contrib/socks.py

[coverage:report]
exclude_lines =
    except ImportError:
    pass
    import
    raise
    .* # Platform-specific.*
    .*:.* # Python \d.*
    .* # Abstract
    .* # Defensive:
