[metadata]
name = hip
description = Hip: A new Python HTTP client for Everyone
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = http client
license = MIT -or- Apache-2.0
author = The Trio Collective
author_email = njs@pobox.com
url = https://hip.readthedocs.io
project_urls =
    Documentation = https://hip.readthedocs.io
    Source = https://github.com/python-trio/hip
    Issue tracker = https://github.com/python-trio/hip/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, != 3.4.*, <4
install_requires =
    h11 >= 0.8.0
    sniffio; python_version>='3.6'

[options.packages.find]
where = src

[options.extras_require]
brotli = brotlipy>=0.6.0
secure =
    pyOpenSSL>=0.14
    cryptography>=1.3.4
    idna>=2.0.0
    certifi
    ipaddress; python_version=='2.7'
socks = PySocks >=1.5.6, <2.0, !=1.5.7

[tool:pytest]
xfail_strict = true
python_classes = Test *TestCase

[flake8]
ignore = E501, E203, W503, W504
exclude = ./docs/conf.py,./src/hip/packages/*
max-line-length = 99

[bdist_wheel]
universal = 1

[coverage:run]
omit =
    *hip/packages/*
    *hip/contrib/ntlmpool.py
    *hip/contrib/pyopenssl.py
    *hip/contrib/securetransport.py
    *hip/contrib/_securetransport/*
    # remove when ready to test the async backends
    *hip/_async/*
    *hip/_backends/anyio_backend.py
    *hip/_backends/trio_backend.py
    *hip/_backends/twisted_backend.py
    *hip/_backends/async_backend.py
    *hip/contrib/socks.py

[coverage:report]
exclude_lines =
    except ImportError:
    pass
    import
    raise
    .* # Platform-specific.*
    .*:.* # Python \d.*
    .* # Abstract
    .* # Defensive:
